paragraph overflow fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -135,10 +135,11 @@ main {
   font-size: large;
   font-weight: bold;
   margin: 0em;
-  padding-left: .25em;
+  padding-left: 0.25em;
 }
 .rating {
-  font-size: medium;
+  font-size: small;
+  font-weight: bold;
   vertical-align: super;
 }
 .info {
@@ -154,6 +155,7 @@ main {
   font-size: small;
   font-weight: bold;
   margin: 0.5em 0 0 0;
+  overflow-wrap: anywhere;
 }
 .runtime {
   font-size: small;
@@ -167,6 +169,7 @@ main {
   font-size: small;
   font-weight: 500;
   margin: 0;
+  overflow-wrap: anywhere;
 }
 .external {
   padding-top: 1em;
@@ -187,6 +190,7 @@ main {
 }
 .overview {
   font-size: small;
+  overflow-wrap: break-word;
 }
 .budget {
   font-size: small;
@@ -207,7 +211,7 @@ main {
   flex-wrap: wrap;
   flex-direction: row;
   overflow-x: auto;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 .credits,
@@ -217,7 +221,7 @@ main {
 }
 .profile {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 1em;
+  margin: 0.5em 0.25em;
   background-color: white;
   padding: 0 0.25em;
   width: 6em;
@@ -249,7 +253,7 @@ main {
 }
 .similar-title {
   margin: 0;
-  font-size: medium;
+  font-size: small;
   font-weight: bold;
   text-align: center;
 }
@@ -314,6 +318,11 @@ main {
   .adult {
     font-size: medium;
     padding-right: 5em;
+  }
+  .cast,
+  .crew,
+  .similar-list {
+    justify-content: flex-start;
   }
   .profile {
     width: 6em;
